deploy/k8s/40-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okvns-admin-web
  namespace: okvns
  labels:
    app.kubernetes.io/name: okvns-admin-web
    app.kubernetes.io/part-of: okvns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: okvns-admin-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: okvns-admin-web
        app.kubernetes.io/part-of: okvns
    spec:
      automountServiceAccountToken: false
      containers:
        - name: admin-web
          image: beshmo/okvns:okvns-admin-web-1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
              ephemeral-storage: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
              ephemeral-storage: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: okvns-admin-web
  namespace: okvns
  labels:
    app.kubernetes.io/name: okvns-admin-web
    app.kubernetes.io/part-of: okvns
spec:
  selector:
    app.kubernetes.io/name: okvns-admin-web
  ports:
    - name: http
      port: 80
      targetPort: http
